[tool.poetry]
name = "pytools"
version = "0.1.0"
description = ""
authors = ["Miller <miltonycchow@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
pytools = 'pytools.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "^24.3.0"

